--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>spark-sql_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
-
+        <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql-kafka-0-10_${scala.version}</artifactId>
+        <version>${spark.version}</version>
+        </dependency>
 
     </dependencies>
 
