--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
         <version>${spark.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.41</version>
+        </dependency>
+
     </dependencies>
 
 </project>
